bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: value False
var fini = False:Boolean
           ^BDR:34: error: not found: value True
      fini = True}
             ^